[package]
name = "yew_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
subxt = { version="0.25.0", default-features = false, features = ["jsonrpsee-web"] }
# sp-keyring = { version = "12.0.0", default-features = false }
sp-core = { version = "11.0.0", default-features = false }
sp-runtime = { version = "12.0.0", default-features = false  }


[features]
default = ["std"]
std = [
	"sp-core/std",
    "sp-runtime/std"
]
